@@ -296,9 +296,13 @@ Far = {
 function Far.GetConfig (keyname)
   checkarg(keyname, 1, "string")
   local key, name = keyname:match("^(.+)%.([^.]+)$")
-  assert(key, "invalid argument #1")
+  if not key then
+    error("invalid format of arg. #1", 2)
+  end
   local tp,val = MacroCallFar(MCODE_F_FAR_GETCONFIG, key, name)
-  if not tp then error("cannot get '"..keyname.."'") end
+  if not tp then
+    error("cannot get setting '"..keyname.."'", 2)
+  end
   tp = ({"boolean","3-state","integer","string"})[tp]
   if tp == "3-state" then
     if val==0 or val==1 then val=(val==1) else val="other" end
